gcc-14.2.0/gcc/testsuite/gdc.test/runnable/imports/ufcs5d.d
version https://git-lfs.github.com/spec/v1
oid sha256:bbcfcad58b5600571856705743c16e0fa25e5c7041fc5daffc9d38ab8d7b5c5e
size 575
